                      Revision history for CMap

0.17

- Fixed a flaw in the tick mark logic.  Rather than rounding the location
  string of the tick mark, it now places the tick marks at reasonably rounded
  locations.

0.16 

-   Updated menus to be more intuitive
-   Added AJAX to load the comparative maps menu separately to speed up page
    loading
-   Added more options to opening menu
-   Caches the first view of a map (before sessions are invoked)
-   Removed cluster correspondence option
-   Bug fixes
-   Added chado synchronization tools
-   Added commas to the matrix
-   Some query optimization
-   Added script to order, orient and stack relational maps based on a
    reference map for easier viewing
-   Allow for custom map size
-   Modified the make name correspondence code to work with really large maps
-   Modified the delete duplicate correspondence code for speed
-   Allow for multiple installations on the same machine

0.15    2005-01-05

-   Server side sessions are used to store the information about what is being 
    viewed.  This dramatically reduces URL size and allows more complex 
    operations.  However, sessions expire, making bookmarks volatile.
-   Added a feature to save links permanently.  By clicking the "Save Link" 
    button, a new permanent URL is created for the user to bookmark.  Saved 
    links can also be browsed.
-   "Saved Links" can also be imported via cmap_admin.pl using an XML file.
-   The "Import Links" code has been completely replaced by "Saved Links" 
    code.  The "Import Links" code created links that were easily deleted by 
    the system and didn't have a very robust import format.
-   A "Hide Empty Rows" option was added to the matrix.
-   Speed increases to help with larger data sources.
-   Allow individual "Minimum number of Corrs" value for each slot.
-   Added a "default" feature type display value for features that may be on 
    new comparison maps.
-   Added a cluster correspondence option.